# ticTacToe_minmax

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
